fixed off-center buttons on home page

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -195,7 +195,6 @@ a:focus-visible {
 
 .grid-container {
     font-size: 1rem;
-    margin: 1em 0;
     padding: 0;
     display: grid;
     grid-gap: .5em;
